# academic-copilot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: deps.py  (+3 more)
backend/: .env.example  README.md  main.py  pyproject.toml
backend/config/: llms.yaml  tools.yaml
backend/config/agents/: critic.yaml  critic_academic.yaml  critic_proposal.yaml  experiment_designer.yaml  gap_hypothesis.yaml  local_reader.yaml  method_designer.yaml  planner.yaml  planner_academic.yaml  planner_proposal.yaml  reader_extractor.yaml  report_exporter.yaml  reporter.yaml  reporter_proposal.yaml  researcher.yaml  researcher_proposal.yaml  search_scholar.yaml  supervisor.yaml  synthesizer.yaml  synthesizer_proposal.yaml  writer_academic.yaml
backend/config/system/: supervisor.yaml
backend/config/workflows/: lit_review.yaml  proposal.yaml  proposal_v2.yaml
backend/scripts/: api_e2e.sh  local_cli.py  local_smoke.py
backend/src/application/: graph.py
backend/src/domain/: __init__.py
backend/tests/: conftest.py
backend/tests/api/: test_chat_and_admin_routes.py  test_schemas.py  test_service_config_validation.py  test_service_health.py  test_service_memory_integration.py
backend/tests/infrastructure/: test_local_filesystem.py  test_tool_manager.py
backend/tests/memory/: test_ltm_path_safety.py  test_ltm_profile_limits.py  test_memory_adapter.py  test_memory_pipeline.py  test_sqlite_store.py  test_stm_background_tasks.py
backend/tests/runtime/: test_agent_factory_runtime.py  test_config_registry.py  test_context_facility.py  test_observability.py  test_orchestrator_confirmation.py  test_runtime_engine_json_parse.py  test_runtime_engine_llm_resolution.py  test_runtime_engine_smoke.py  test_runtime_engine_supervisor_limits.py  test_runtime_result_service.py  test_spec_models.py  test_state_contract.py  test_workflow_runtime.py
backend/tests/tools/: test_academic_tools_search.py  test_export_tools.py
(+133 files in other folders)
